--- a/Town-Of-Salem/pom.xml
+++ b/Town-Of-Salem/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
