feature: Continue implemeting game & lobby API

--- a/Town-Of-Salem/src/main/resources/application.properties
+++ b/Town-Of-Salem/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:./test.db
+spring.datasource.url=jdbc:h2:./database
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
