--- a/Town-Of-Salem/pom.xml
+++ b/Town-Of-Salem/pom.xml
@@ -66,8 +66,12 @@
 			<version>7.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
